- remove cachebehaviour flag from ChangeLog.persisted - minor improvement
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@521356 13f79535-47bb-0310-9956-ffa450edef68